Define headerSignIn element to fix auth button handler

--- a/index.html
+++ b/index.html
@@ -679,6 +679,7 @@
     const authSubmitMagic = document.getElementById('auth-submit-magic');
     const authSubmitReset = document.getElementById('auth-submit-reset');
     const authForgot = document.getElementById('auth-forgot');
+    const headerSignIn = document.getElementById('header-signin');
 
     const appState = {
       session: null,
