--- a/index.html
+++ b/index.html
@@ -890,28 +890,42 @@
     });
 
     const parseRecoveryParams = () => {
+      // Supabase may pass code/token via query, and access/refresh tokens via hash
       const hashParams = new URLSearchParams(window.location.hash.replace('#', '?'));
       const queryParams = new URLSearchParams(window.location.search);
       const type = hashParams.get('type') || queryParams.get('type');
-      const code = hashParams.get('code') || queryParams.get('code');
+      const code = hashParams.get('code') || queryParams.get('code') || queryParams.get('token');
       const accessToken = hashParams.get('access_token') || queryParams.get('access_token');
-      return { type, code, accessToken };
+      const refreshToken = hashParams.get('refresh_token') || queryParams.get('refresh_token');
+      return { type, code, accessToken, refreshToken };
     };
 
     const handleRecoveryFromUrl = async () => {
       if (!supabase) return;
-      const { type, code } = parseRecoveryParams();
-      if (type === 'recovery' && code) {
-        const { data, error } = await supabase.auth.exchangeCodeForSession(code);
-        if (error) {
-          console.warn('Recovery exchange failed', error);
-          return;
+      const { type, code, accessToken, refreshToken } = parseRecoveryParams();
+      if (type === 'recovery') {
+        if (code) {
+          const { data, error } = await supabase.auth.exchangeCodeForSession(code);
+          if (error) {
+            console.warn('Recovery exchange failed', error);
+            return;
+          }
+          setSessionUI(data?.session || null);
+        } else if (accessToken && refreshToken) {
+          const { data, error } = await supabase.auth.setSession({ access_token: accessToken, refresh_token: refreshToken });
+          if (error) {
+            console.warn('Recovery session set failed', error);
+            return;
+          }
+          setSessionUI(data?.session || null);
         }
-        setSessionUI(data?.session || null);
-        setAuthView('update');
-        authModalTitle.textContent = 'Set a new password';
-        authModalDesc.textContent = 'Complete your password reset to continue.';
-        authModal.classList.add('active');
+        // If we obtained/confirmed a session, show the update password view
+        if (appState.session) {
+          setAuthView('update');
+          authModalTitle.textContent = 'Set a new password';
+          authModalDesc.textContent = 'Complete your password reset to continue.';
+          authModal.classList.add('active');
+        }
       }
     };
 
