--- a/index.html
+++ b/index.html
@@ -708,6 +708,7 @@
     // Supabase client config (replace placeholders or set window.SUPABASE_URL / window.SUPABASE_ANON_KEY)
     const SUPABASE_URL = window.SUPABASE_URL || 'https://yyzyyjxmoggrmqsgrlxc.supabase.co';
     const SUPABASE_ANON_KEY = window.SUPABASE_ANON_KEY || 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inl5enl5anhtb2dncm1xc2dybHhjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjYxMTQ4MzMsImV4cCI6MjA4MTY5MDgzM30.BhnHmz9ADB52B_VcMdzvdyFiPvZFj_Q-jfjRqeAoQM4';
+    const RESET_REDIRECT = 'https://www.esgrise.com/'; // must be a clean URL without hash
     let supabase = null;
     const initSupabaseClient = async () => {
       try {
@@ -1003,7 +1004,7 @@
         return;
       }
       authStatusReset.textContent = 'Sending reset link...';
-      const { error } = await supabase.auth.resetPasswordForEmail(authEmailReset.value, { redirectTo: window.location.href });
+      const { error } = await supabase.auth.resetPasswordForEmail(authEmailReset.value, { redirectTo: RESET_REDIRECT });
       if (error) {
         authStatusReset.textContent = 'Could not send reset link. Please try again.';
         return;
