--- a/index.html
+++ b/index.html
@@ -850,7 +850,8 @@
           <div class="muted">Location-based: ${formatNumber(row.location_based_emissions, 3)} t CO₂e • Market-based: ${marketVal}</div>
           <details style="margin-top:6px;">
             <summary>View details</summary>
-            <p class="muted">Region: ${row.companies?.country || '—'}${row.companies?.region ? ' / ' + row.companies.region : ''}</p>
+            <p class="muted">Region (calculation): ${row.calc_country || '—'}${row.calc_region ? ' / ' + row.calc_region : ''}</p>
+            <p class="muted">Company profile: ${row.companies?.country || '—'}${row.companies?.region ? ' / ' + row.companies.region : ''}</p>
             <p class="muted">Factor value: ${formatNumber(row.emission_factor_value, 6)} t CO₂e/kWh • ${row.emission_factor_source} ${row.emission_factor_year}</p>
             <p class="muted">Location-based Scope 2 (GHG Protocol)</p>
             <button class="btn secondary" data-delete="${row.id}" style="margin-top:6px;">Delete record</button>
@@ -868,7 +869,7 @@
       if (!appState.session) return;
       const { data, error } = await supabase
         .from('scope2_records')
-        .select('id,period_year,period_month,kwh,location_based_emissions,market_based_emissions,emission_factor_source,emission_factor_year,emission_factor_value,companies(country,region)')
+        .select('id,period_year,period_month,kwh,location_based_emissions,market_based_emissions,emission_factor_source,emission_factor_year,emission_factor_value,calc_country,calc_region,companies(country,region)')
         .order('created_at', { ascending: false });
       if (error) {
         alert('Could not load history right now.');
@@ -1168,7 +1169,9 @@
         covered_kwh: calc.marketEnabled ? calc.coveredKwh : null,
         emission_factor_value: calc.factorValue,
         emission_factor_year: calc.factorYear,
-        emission_factor_source: calc.factorSource
+        emission_factor_source: calc.factorSource,
+        calc_country: calc.country,
+        calc_region: calc.region
       };
       const { error } = await supabase
         .from('scope2_records')
